web-service-consumer/1.5/modules/ROOT/pages/web-service-consumer-reference.adoc
= Web Service Consumer Connector Reference - Mule 4
:page-aliases: connectors::web-service/web-service-consumer-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Web Service Consumer Connector Version 1.5

Anypoint Connector for Web Service Consumer (Web Service Consumer Connector) consumes a SOAP Web service
to acquire data from an external source.

Release Notes: xref:release-notes::connector/connector-wsc.adoc[Web Service Consumer Release Notes]

== Configurations

[[config]]
=== Default Configuration

Default configuration.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*
| Connection a| <<config_connection, Connection>>
 | The connection types to provide to this configuration. | | *x*
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before it is eligible for expiration. Once a configuration instance is designated as expired, it is subsequently purged. |  |
|===

==== Connection Types

[[config_connection]]
===== Connection

Connection provider that returns instances of WSC SOAP client.

====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Soap Version a| Enumeration, one of:

* SOAP11
* SOAP12 |  The SOAP version of the WSDL. |  SOAP11 |
| Mtom enabled a| Boolean |  Determines whether or not to use the MTOM protocol to manage the attachments. |  `false` |
| Encoding a| String |  Default character encoding to use in all the messages. If not specified, the default charset in the mule configuration is used. |  |
| Transport Configuration a| One of:

* <<http-transport-configuration>>
* <<DefaultHttpTransportConfiguration>> |  The transport configuration used to dispatch the SOAP messages. |  |
| WSDL Location a| String |  The WSDL file URL (remote or local). |  | *x*
| Service a| String |  The service name. |  | *x*
| Port a| String |  The port name. |  | *x*
| Address a| String |  The address of the web service. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Sign Security Strategy a| <<WssSignSecurityStrategyAdapter>> |  A sign WSS configuration. |  |
| Verify Signature Security Strategy a| <<WssVerifySignatureSecurityStrategyAdapter>> |  A verify signature WSS configuration. |  |
| Username Token Security Strategy a| <<WssUsernameTokenSecurityStrategyAdapter>> |  A username token security strategy WSS configuration. |  |
| Outgoing Timestamp Security Strategy a| <<WssTimestampSecurityStrategyAdapter>> |  A timestamp WSS configuration. |  |
| Decrypt Security Strategy a| <<wss-decrypt-security-strategy>> |  A decrypt WSS configuration. |  |
| Encrypt Security Strategy a| <<WssEncryptSecurityStrategyAdapter>> |  An encrypt WSS configuration. |  |
| Incoming Timestamp Security Strategy a| <<WssIncomingTimestampSecurityStrategyAdapter>> |  A timestamp verification WSS configuration. |  |
| Must Understand a| Boolean |  Determines whether the *Must understand* attribute in the Web Service Security header is `true` or `false`. Defaults to `true`. |  `true` |
| Actor a| String |  A SOAP message may travel from a sender to a receiver by passing different endpoints along the message path. The SOAP actor attribute is used to address the Web Service Security header to a specific endpoint. This parameter's value must be a URI. |  |
|===

==== Associated Operations

<<consume>>

== Operations

[[consume]]
=== Consume

`<wsc:consume>`

Consumes an operation from a SOAP Web Service.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Operation a| String |  The name of the Web service operation that aims to invoke. |  | *x*
| Body a| Binary |  The XML body to include in the SOAP message, with all the required parameters, or `null` if no parameters are required. |  #[payload] |
| Headers a| Binary |  The XML headers to include in the SOAP message. |  |
| Attachments a| Object |  The attachments to include in the SOAP request. |  |
| Headers a| Object |  A group of transport headers that are bounded with the transport request. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type | <<SoapOutputEnvelope>>
| Attributes Type a| <<SoapAttributes>>
|===

==== For Configurations

<<config>>

==== Throws

* WSC:SOAP_FAULT
* WSC:TIMEOUT
* WSC:BAD_RESPONSE
* WSC:BAD_REQUEST
* WSC:CONNECTIVITY
* WSC:CANNOT_DISPATCH
* WSC:RETRY_EXHAUSTED
* WSC:ENCODING
* WSC:INVALID_WSDL

== Types

[[Reconnection]]
=== Reconnection
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in milliseconds) to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If `false`, the reconnection strategy runs in a separate, non-blocking thread. |`true`|
|===

[[reconnect-forever]]
=== Reconnect Forever
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in milliseconds) to reconnect. | |
| blocking |Boolean |If `false`, the reconnection strategy runs in a separate, non-blocking thread. |`true` |
|===

[[WssSignSecurityStrategyAdapter]]
=== WSS Sign Security Strategy Adapter
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | The keystore to use when signing the message. |  | x
| Sign Algorithm Configuration a| <<WssSignConfigurationAdapter>> | The algorithms to use on the signing. |  |
|===

[[wss-key-store-configuration]]
=== WSS Keystore Configuration
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Key Store Path a| String |  |  | x
| Alias a| String |  |  | x
| Password a| String |  |  | x
| Key Password a| String |  |  |
| Type a| String |  | JKS |
|===

[[WssSignConfigurationAdapter]]
=== WSS Sign Configuration Adapter
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Signature Key Identifier a| Enumeration, one of:

** ISSUER_SERIAL
** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER
** THUMBPRINT
** SKI_KEY_IDENTIFIER
** KEY_VALUE |  | ISSUER_SERIAL |
| Signature Algorithm a| Enumeration, one of:

** RSAwithSHA256
** ECDSAwithSHA256
** DSAwithSHA1
** RSAwithSHA1
** RSAwithSHA224
** RSAwithSHA384
** RSAwithSHA512
** ECDSAwithSHA1
** ECDSAwithSHA224
** ECDSAwithSHA384
** ECDSAwithSHA512
** DSAwithSHA256 |  |  |
| Signature Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA224
** SHA384
** SHA512 |  | SHA1 |
| Signature C14n Algorithm a| Enumeration, one of:

** CanonicalXML_1_0
** CanonicalXML_1_1
** ExclusiveXMLCanonicalization_1_0 |  | ExclusiveXMLCanonicalization_1_0 |
| WSS Parts a| Array of <<wss-part>> |  |  |
|===

[[wss-part]]
=== WSS Part
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Encode a| Enumeration, one of:

** ELEMENT
** CONTENT |  | CONTENT |
| Namespace a| String |  |  | x
| Localname a| String |  |  | x
|===

[[WssVerifySignatureSecurityStrategyAdapter]]
=== WSS Verify Signature Security Strategy Adapter
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Trust Store Configuration a| <<wss-trust-store-configuration>> | The truststore to use to verify the signature. |  |
|===

[[wss-trust-store-configuration]]
=== WSS Trust Store Configuration
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Trust Store Path a| String |  |  | x
| Password a| String |  |  | x
| Type a| String |  | jks |
|===

[[WssUsernameTokenSecurityStrategyAdapter]]
=== WSS Username Token Security Strategy Adapter
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | The username required to authenticate with the service. |  | x
| Password a| String | The password for the provided username required to authenticate with the service. |  | x
| Password Type a| Enumeration, one of:

** DIGEST
** TEXT | A #password parameter. | TEXT |
| Add Nonce a| Boolean | Specifies whether to add a cryptographically random nonce to the message. | false |
| Add Created a| Boolean | Specifies if a timestamp should be created to indicate the creation time of the message. | false |
|===

[[WssTimestampSecurityStrategyAdapter]]
=== WSS Timestamp Security Strategy Adapter
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Time To Live a| Number a| The time difference between creation and expiry time in the time unit specified in `timeToLiveUnit`.
 After this time the message is invalid. This parameter's value must be greater than or equal to 1 second (or similar in in another unit).
 Values set for less than 1 second are set to a 1 second timestamp. | 60 |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS a| A *Time to live* parameter. Defaults to `SECONDS`. | `SECONDS` |
|===

[[wss-decrypt-security-strategy]]
=== WSS Decrypt Security Strategy
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | The keystore to use when decrypting the message. |  | x
|===

[[WssEncryptSecurityStrategyAdapter]]
=== WSS Encrypt Security Strategy Adapter
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | The keystore to use when encrypting the message. |  | x
| Encryption Algorithms Configuration a| <<wss-encryption-algorithms-configuration>> |  |  |
|===

[[wss-encryption-algorithms-configuration]]
=== WSS Encryption Algorithms Configuration
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Encryption Key Identifier a| Enumeration, one of:

** ISSUER_SERIAL
** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER
** THUMBPRINT
** SKI_KEY_IDENTIFIER
** ENCRYPTED_KEY_SHA1
** EMBEDDED_KEY_NAME |  | ISSUER_SERIAL |
| Encryption Sym Algorithm a| Enumeration, one of:

** TRIPLE_DES
** AES_128
** AES_256
** AES_192
** AES_128_GCM
** AES_192_GCM
** AES_256_GCM |  | AES_128 |
| Encryption Key Transport Algorithm a| Enumeration, one of:

** KEYTRANSPORT_RSA15
** KEYTRANSPORT_RSAOAEP
** KEYTRANSPORT_RSAOAEP_XENC11 |  | KEYTRANSPORT_RSAOAEP |
| Encryption Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA384
** SHA512 |  | SHA1 |
| Wss Part Adapters a| Array of <<wss-part>> |  |  |
|===

[[WssIncomingTimestampSecurityStrategyAdapter]]
=== WSS Incoming Timestamp Security Strategy Adapter
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Future Time To Live a| Number | Specifies the time in the future within which the Created time of an incoming timestamp is valid. The default
 value is `60`, to avoid problems where clocks are slightly askew. To reject all future-created timestamps, set
 this value to `0`. | `60` |
| Future Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A *Future time to live unit* parameter. Defaults to `SECONDS`. | `SECONDS` |
|===

[[ExpirationPolicy]]
=== Expiration Policy
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance can be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the *Max idle time* attribute. |  |
|===

[[SoapOutputEnvelope]]
=== SOAP Output Envelope
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Attachments a| Object |  |  |
| Body a| Binary |  |  |
| Headers a| Object |  |  |
|===

[[SoapAttributes]]
=== SOAP Attributes
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Protocol Headers a| Object | The protocol headers bundled in the response. |  | x
| Additional Transport Data a| Object | The additional transport data bundled in the response. |  | x
|===

[[http-transport-configuration]]
=== HTTP Transport Configuration
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Requester Config a| String |  |  | x
|===

[[DefaultHttpTransportConfiguration]]
=== Default HTTP Transport Configuration
[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Timeout a| Number |  | 5000 |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
